Fix select text clipping

--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -13,3 +13,8 @@
         }
     }
 }
+
+select.form-control {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
